--- a/client/src/assets/scss/utils/_font.scss
+++ b/client/src/assets/scss/utils/_font.scss
@@ -39,5 +39,6 @@ $color-cyan-lightest: #80ffdb; // Lightest Cyan
 // Common Colors
 $color-red: #ff0000; // Red
 $color-white: #ffffff; // White
+$color-yellow: #ffbb00; // yellow
 $color-black: #000000; // Black
 $color-black-light: #1a1a1a; // Black
