--- a/client/src/assets/scss/layout/_header.scss
+++ b/client/src/assets/scss/layout/_header.scss
@@ -2,10 +2,14 @@
 
 .container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     padding: 0 40px;
     color: utils.$color-white;
     border-bottom: 2px solid utils.$color-cyan-lightest;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: utils.$color-black;;
 
     .header {
         column-gap: 1em;
@@ -30,6 +34,7 @@
             align-items: center;
 
             &__box {
+                position: relative;
                 min-width: 500px;
                 display: flex;
                 align-items: center;
@@ -53,6 +58,48 @@
             }
         }
 
+        .search__list {
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            background-color: #fff;
+            min-width: 500px;
+            top: 50px;
+            z-index: 10;
+            color: black;
+            font-size: 12px;
+            overflow-y: scroll;
+            max-height: 500px;
+            padding: 20px;
+
+            .user-text {
+                font-size: 15px;
+                line-height: 1;
+                font-weight: 700;
+            }
+
+
+
+            &-item {
+                display: flex;
+                gap: 2em;
+                margin-bottom: 5px;
+                padding: 10px;
+
+                img {
+                    width: 50px;
+                    height: 50px;
+                }
+            }
+
+            &-item:hover {
+                background-color: beige;
+                cursor: pointer;
+            }
+
+
+        }
+
         &__navigation {
             display: flex;
             align-items: center;
@@ -63,6 +110,11 @@
                 display: flex;
                 align-items: center;
                 list-style: none;
+
+                .icon {
+                    clear: both;
+                    font-size: 25px;
+                }
             }
 
             &__active {
@@ -113,6 +165,7 @@
             }
 
         }
+
 
     }
 }
