--- a/client/src/assets/scss/layout/cart/_cart.scss
+++ b/client/src/assets/scss/layout/cart/_cart.scss
@@ -69,6 +69,11 @@
                 padding-right: 10px;
                 
             }
+
+            .icon{
+                cursor: pointer;
+                color: red;
+            }
         }
     }
     
