--- a/client/src/assets/scss/layout/_header.scss
+++ b/client/src/assets/scss/layout/_header.scss
@@ -9,7 +9,7 @@
     position: sticky;
     top: 0;
     z-index: 1000;
-    background-color: utils.$color-black;;
+    background-color: utils.$color-black;
 
     .header {
         column-gap: 1em;
@@ -62,11 +62,11 @@
             position: absolute;
             display: flex;
             flex-direction: column;
-            background-color: #fff;
+            background-color: utils.$color-white;
             min-width: 500px;
             top: 50px;
             z-index: 10;
-            color: black;
+            color: utils.$color-black;
             font-size: 12px;
             overflow-y: scroll;
             max-height: 500px;
@@ -77,8 +77,6 @@
                 line-height: 1;
                 font-weight: 700;
             }
-
-
 
             &-item {
                 display: flex;
@@ -93,7 +91,7 @@
             }
 
             &-item:hover {
-                background-color: beige;
+                background-color: utils.$color-cyan-light;
                 cursor: pointer;
             }
 
@@ -130,12 +128,9 @@
 
 
                 &__like,
-                &__cart {
+                &__cart,
+                &__user {
                     position: relative;
-
-                    &:active {
-                        color: utils.$color-red;
-                    }
 
                     &__badge {
                         position: absolute;
@@ -153,6 +148,42 @@
                         justify-content: center;
                         z-index: 10;
                     }
+
+                    &__dropdown {
+                        position: absolute;
+                        display: flex;
+                        flex-direction: column;
+                        background-color: utils.$color-white;
+                        min-width: 350px;
+                        top: 50px;
+                        right: 0;
+                        z-index: 1000;
+                        color: utils.$color-black;
+                        font-size: 12px;
+                        overflow-y: none;
+                        max-height: 500px;
+                        padding: 20px;
+
+                    }
+
+                    &__dropdown:after {
+                        content: '';
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        margin-right: 1px;
+                        margin-top: -14px;
+                        width: 0;
+                        z-index: 1000;
+                        height: 0;
+                        border-bottom: solid 15px utils.$color-white;
+                        border-left: solid 10px transparent;
+                        border-right: solid 10px transparent;
+                    }
+
+                    .active {
+                        color: utils.$color-red;
+                    }
                 }
             }
 
@@ -164,8 +195,55 @@
                 font-weight: 700;
             }
 
+            &__signin {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                border-bottom: 1px solid utils.$color-black;
+
+                &-button {
+                    background-color: utils.$color-purple-mid;
+                    color: utils.$color-white;
+                    border: none;
+                    font-size: 16px;
+                    border-radius: 5px;
+                    padding: 5px;
+                    width: 80px;
+                }
+
+
+                &-button:hover {
+                    background-color: utils.$color-purple-dark;
+                }
+
+                &-button:active {
+                    background-color: utils.$color-purple-light-mid;
+                }
+
+                p {
+                    font-size: 15px;
+                }
+
+                span {
+                    color: utils.$color-blue-dark;
+                }
+
+                span:hover {
+                    text-decoration: underline;
+                }
+
+            }
+
+            &__dropdownlist {
+                font-size: 15px;
+                padding: 5px;
+
+                &-item:hover {
+                    text-decoration: underline;
+                    cursor: pointer;
+                }
+            }
         }
-
-
     }
 }
