--- a/client/src/assets/scss/layout/home/_banner.scss
+++ b/client/src/assets/scss/layout/home/_banner.scss
@@ -20,8 +20,8 @@
                 position: absolute;
                 width: 2rem;
                 height: 2rem;
-                color: white;
-                filter: drop-shadow(0px 0px 5px #050505);
+                color: utils.$color-white;;
+                filter: drop-shadow(0px 0px 5px utils.$color-black);
                 top: 50%;
                 z-index: 1;
             }
