--- a/client/src/assets/scss/layout/shop/_shop.scss
+++ b/client/src/assets/scss/layout/shop/_shop.scss
@@ -108,7 +108,7 @@
             &-card {
                 display: flex;
                 flex-direction: column;
-                background-color: utils.$color-purple-light-mid;
+                background-color: utils.$color-grey-dark;
                 height: 450px;
                 max-width: 250px;
                 border-radius: 10px;
