--- a/client/src/assets/scss/utils/_font.scss
+++ b/client/src/assets/scss/utils/_font.scss
@@ -44,3 +44,5 @@ $color-yellow: #ffbb00; // yellow
 $color-black: #000000; // Black
 $color-black-light: #1a1a1a; // Black
 $color-grey: #808080;
+$color-grey-dark: #4b4b4b;
+$color-alert-red: #ED4F32;
