like & cart api integration

--- a/client/src/assets/scss/layout/cart/_cart.scss
+++ b/client/src/assets/scss/layout/cart/_cart.scss
@@ -68,8 +68,16 @@
                 ;
             }
         }
-    }
 
+    }
+    
+    .cart-heading {
+        text-align: center;
+        width: 100%;
+        background-color: utils.$color-white;
+        color: utils.$color-black;
+    }
+    
     &-subtotal {
         display: flex;
         justify-content: flex-end;
