--- a/client/src/assets/scss/layout/signin/_signin.scss
+++ b/client/src/assets/scss/layout/signin/_signin.scss
@@ -28,7 +28,7 @@
       width: 600px;
     }
 
-   .submit-btn {
+    .submit-btn {
       width: 100%;
       height: 100%;
       padding: 10px;
@@ -41,6 +41,12 @@
       margin-top: 15px;
       margin-bottom: 30px;
       color: utils.$color-white;
+    }
+
+    .credential-error {
+      color: utils.$color-red-light;
+      display: flex;
+      justify-content: center;
     }
 
     input {
@@ -82,7 +88,7 @@
         color: utils.$color-cyan-light;
       }
 
-      &-btn{
+      &-btn {
         width: 180px;
         height: 100%;
         padding: 10px;
