--- a/client/src/assets/scss/layout/_header.scss
+++ b/client/src/assets/scss/layout/_header.scss
@@ -9,7 +9,7 @@
     position: sticky;
     top: 0;
     z-index: 1000;
-    background-color: utils.$color-black;
+    background-color: utils.$color-black-low-contrast-1;
 
     .header {
         column-gap: 1em;
