--- a/client/src/assets/scss/utils/_font.scss
+++ b/client/src/assets/scss/utils/_font.scss
@@ -40,9 +40,14 @@ $color-cyan-lightest: #80ffdb; // Lightest Cyan
 $color-red: #ff0000; // Red
 $color-red-light: #f58e8e; // Red
 $color-white: #ffffff; // White
+$color-white-light: #ddd; // White
 $color-yellow: #ffbb00; // yellow
 $color-black: #000000; // Black
+$color-black-low-contrast-1: #111111; // Black
+$color-black-low-contrast-2: #141414;
+; // Black
 $color-black-light: #1a1a1a; // Black
 $color-grey: #808080;
 $color-grey-dark: #4b4b4b;
 $color-alert-red: #ED4F32;
+$color-progress-green: #18e648;
