--- a/client/src/assets/scss/layout/shipping/_shipping.scss
+++ b/client/src/assets/scss/layout/shipping/_shipping.scss
@@ -5,28 +5,26 @@
 
     &-container {
         padding: 40px 80px;
-        background-color: #000000;
+        background-color: utils.$color-black-low-contrast-1;
         border-radius: 15px;
 
         .progress-bar {
             height: 4px;
-            background-color: #686868;
+            background-color: utils.$color-grey-dark;
             margin-bottom: 20px;
         }
 
         .progress {
             height: 100%;
-            background-color: #28a745;
+            background-color: utils.$color-progress-green;
             transition: 0.2s ease;
         }
-
 
         .steps {
             display: flex;
             justify-content: space-between;
             align-items: center;
             margin-bottom: 20px;
-
 
             .step {
                 display: flex;
@@ -42,8 +40,8 @@
                 height: 30px;
                 border-radius: 50%;
                 font-weight: 700;
-                background-color: #4d4d4d;
-                color: #000000;
+                background-color: utils.$color-grey-dark;
+                color: utils.$color-black;
                 margin-bottom: 15px;
                 z-index: 2;
             }
@@ -69,7 +67,7 @@
             margin: 50px auto;
             padding: 35px;
             max-width: 60%;
-            background-color: utils.$color-black;
+            background-color: utils.$color-black-low-contrast-2;
             border-radius: 20px;
             box-shadow: 0 4px 30px utils.$color-purple-light-mid;
             backdrop-filter: blur(4.8px);
@@ -87,10 +85,11 @@
 
                 input {
                     width: 100%;
-                    height: 40px;
+                    height: 50px;
                     border: none;
                     border-radius: 10px;
                     padding: 10px;
+                    font-size: 16px;
                 }
 
                 &-name,
@@ -116,8 +115,9 @@
                     }
 
                     .saved-btn {
-                        background-color: utils.$color-grey;
-                        color: utils.$color-black;
+                        background-color: utils.$color-grey-dark;
+                        color: utils.$color-grey;
+                        outline: none;
                     }
                 }
             }
@@ -126,30 +126,30 @@
                 .radio-wrapper {
                     display: flex;
                     flex-direction: column;
-                    width: 500px;
+                    width: 700px;
 
                     .radio {
                         display: flex;
                         justify-content: space-between;
                         border-radius: 10px;
-                        border: 1px solid #fff;
+                        border: 1px solid utils.$color-grey;
                         padding: 10px;
                         margin-bottom: 10px;
-                        font-weight: 700;
+                        font-weight: 500;
                         cursor: pointer;
 
                         input[type='radio'] {
                             width: 15px;
                             height: 15px;
                             margin-right: 5px;
-                            color: #000;
+                            color: utils.$color-black;
                             cursor: pointer;
                         }
 
-
                         &.selected {
-                            background-color: #39deed;
-                            color: #000;
+                            background-color: utils.$color-cyan-light;
+                            color: utils.$color-black;
+                            border: 1px solid utils.$color-white;
                         }
                     }
                 }
@@ -175,15 +175,13 @@
                     th,
                     td {
                         padding: 8px 15px;
-                        border-bottom: 1px solid #ddd;
+                        border-bottom: 1px solid utils.$color-white-light;
                         text-align: center;
-                        /* Center align all content */
                     }
 
                     th {
-                        color: #000;
-                        // text-align: left;
-                        background-color: #f2f2f2;
+                        color: utils.$color-black;
+                        background-color: utils.$color-white-light;
                     }
 
                     th:first-child,
@@ -202,18 +200,18 @@
                         td {
                             padding-top: 20px;
                             border: none;
-                            // font-weight: 700;
                         }
                     }
 
                     .shipping-charge {
                         td {
-                            // font-weight: 700;
                             font-style: italic;
                         }
                     }
 
                     .total-charge {
+                        font-weight: 500;
+
                         &-title {
                             color: utils.$color-cyan-light;
                             font-size: 20px;
@@ -234,38 +232,38 @@
             }
         }
 
-
-
-
         .proceed {
             display: flex;
             justify-content: space-between;
             margin: 0 80px;
 
             &-btn {
-                width: 150px;
+                width: 160px;
                 height: 50px;
                 font-size: 20px;
                 border: none;
                 border-radius: 5px;
-                outline: 1px solid utils.$color-black;
+                outline: 2px solid utils.$color-purple-light-mid;
                 color: utils.$color-white;
-                background-color: utils.$color-purple-light-mid;
+                background: transparent;
+                // background-color: utils.$color-purple-light-mid;
                 cursor: pointer;
-
 
                 &.continue-first-step {
                     margin-left: auto;
                 }
             }
 
+            &-btn:hover {
+                background-color: utils.$color-purple-light-mid;
+            }
+
 
             .disabled {
                 background-color: utils.$color-grey-dark;
-                color: gray;
+                color: utils.$color-grey;
                 cursor: not-allowed;
             }
-
 
             &-btn.hide {
                 display: none;
@@ -275,23 +273,6 @@
 
     .failed {
         display: flex;
-        // gap: 2em;
-
-        &-heading {
-            margin: 0;
-            padding: 0;
-        }
-
-        &-icon {
-            margin-left: 0.5em;
-            color: red;
-            font-size: 35px;
-        }
-    }
-
-    .success {
-        display: flex;
-        // gap: 2em;
         flex-direction: column;
         align-items: center;
 
@@ -303,15 +284,31 @@
 
         &-icon {
             margin-left: 0.5em;
-            color: rgb(13, 255, 0);
+            color: utils.$color-red;
             font-size: 35px;
         }
     }
 
+    .success {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
+        &-heading {
+            margin: 0;
+            padding: 0;
+            margin-bottom: 20px;
+        }
 
+        &-icon {
+            margin-left: 0.5em;
+            color: utils.$color-progress-green;
+            font-size: 35px;
+        }
+    }
 
     .order-placed-container {
+        color: utils.$color-white-light;
 
         .order-placed {
             width: 100%;
@@ -322,22 +319,19 @@
 
             .success-icon {
                 margin-left: 0.5em;
-                color: rgb(13, 255, 0);
+                color: utils.$color-progress-green;
                 font-size: 45px;
             }
 
             .failed-icon {
                 margin-left: 0.5em;
-                color: red;
+                color: utils.$color-red;
                 font-size: 35px;
             }
         }
 
-
-
         .order-placed-wrapper {
             min-width: 100%;
-
 
             h2,
             p {
@@ -347,13 +341,10 @@
 
             .shipping-to,
             .order-details {
-                border: 3px solid white;
+                border: 2px solid utils.$color-white;
                 border-radius: 20px;
                 padding: 20px;
             }
-
-
         }
-
     }
 }
