env & constants update

--- a/client/src/assets/scss/layout/shipping/_shipping.scss
+++ b/client/src/assets/scss/layout/shipping/_shipping.scss
@@ -126,7 +126,7 @@
                 .radio-wrapper {
                     display: flex;
                     flex-direction: column;
-                    width: 700px;
+                    width: 100%;
 
                     .radio {
                         display: flex;
